# sqsgenerator

./: .bumpversion.cfg  .clang-format  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  citation.bib  examples  setup.py  test.py  test_structure.py  test_structure_mpi.py  vcpkg.json  version.json
.github/workflows/: format.yaml  format.yml  native.yml  python-ci.yml  python.yml  wasm.yml  wheels.yaml  wheels.yml
bench/: CMakeLists.txt  clear_array.cpp  count_bonds.cpp  shuffle.cpp
benchmarks/: loop_benchmark.cpp
cli/: CMakeLists.txt  helpers.h  main.cpp  progress.h  termcolor.h
cmake/: FindGMP.cmake  FindSphinx.cmake  RepoInfo.cmake
conda/: pyproject.toml
docs/: api_reference.md  conf.py  core_stubs.py  how_to.md  index.md  input_parameters.md  installation.md  make.bat  parameters.md  requirements.txt  sqsgen_under_the_hood.md  under_the_hood.md  what_is_actually_computed.md
docs/_static/: Co3O4.pymatgen.json  custom.css  run-button.js  ti-n.vasp
docs/core/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/core/modules/: atomistics.rst
docs/source/: advanced_topics.md  api_reference.rst  citation.bib  cli_interface.md  cli_interface.rst  conf.py  how_to.md  index.md  index.rst  input_parameters.md  installation_guide.md  parallelization.md  what_is_actually_computed.md  who_uses_sqsgenerator.rst
docs/source/_static/: custom.css
docs/source/examples/: b2.vasp  gamma-iron-octahedral.vasp  gamma-iron.yaml  ni5.vasp  ni5.yaml  re-w.first.yaml  re-w.second.yaml  re-w.sqs.yaml  ti-al-b-n-prefactors-weights.yaml  ti-al-b-n-prefactors.yaml  ti-al-b-n-weights.yaml  ti-al-b-n.yaml  ti-hex.vasp  ti-n.cif  ti-n.yaml
docs/source/reference/: adapters.rst  io.rst
examples/: cs-cl.poscar.sqs.yaml  cs-cl.sqs.yaml  cs-cl.vasp  re-w.sqs.yaml
include/sqsgen/: compat.h  config.h  json.h  log.h  sqs.h  types.h
include/sqsgen/core/: atom.h  config.h  helpers.h  optimization.h  optimization_config.h  permutation.h  random.h  results.h  shuffle.h  statistics.h  structure.h  structure_utils.h  thread_pool.h
include/sqsgen/core/helpers/: as.h  enumerate.h  fold.h  for_each.h  hash.h  misc.h  numeric.h  rapidhash.h  sorted_vector.h  static_string.h  templates.h  zip.h
include/sqsgen/io/: binary.h  dict.h  json.h  mpi.h  parsing.h  structure.h
include/sqsgen/optimization/: collection.h  comm.h  helpers.h  sqs.h  statistics.h
js/: .prettierrc  eslint.config.js  netlify.toml  package.json  svelte.config.js  vite.config.ts
js/src/: app.html
js/src/lib/: SqsgenOptimizerComponent.svelte  index.ts  optimizer.ts  utils.ts
js/src/routes/: +page.svelte
js/src/theme/: _smui-theme.scss
js/static/: smui.css
js/wasm/: CMakeLists.txt  sqsgen.cpp
python/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
python/extension/: CMakeLists.txt  sqsgen.cpp  utils.h
python/sqsgenerator/: __init__.py  __main__.py  _adapters.py  _optimize.py  cli.py  optimize.py
python/sqsgenerator/cli/: _cli.py  _link.py  _run.py  _shared.py  _version.py  cli.py  run.py
python/sqsgenerator/core/: __init__.py  _core.pyi
python/sqsgenerator/templates/: __init__.py
python/tests/: test_core.py  test_structure.py  test_structure_io.py  test_templates.py
scripts/: build-cli-mpi.sh  build-cli.sh  build-extension.sh  build-tests.sh  build-wasm.sh  delete-runs.py  install-build-deps.bat  install-wheel.py  package-templates.py  patch-pyproject.py
sqsgenerator/: __init__.py  __main__.py  adapters.py  cli.py  compat.py  fn.py  io.py  main.py  public.py  settings.py  structure.py  tools.py
sqsgenerator/commands/: analyse.py  common.py  compute.py  export.py  help.py  params.py  process.py  run.py
sqsgenerator/core/: Makefile  __init__.py  base.pxd  base.pyx  collection.pxd  collection.pyx  dosqs.pyx  fn.py  runner  sqs.pxd  sqs.pyx  structure.py  utils.pxd  utils.py
sqsgenerator/core/include/: atomistics.h  atomistics.hpp  conf_array.h  conf_collection.h  conf_list.h  containers.h  containers.hpp  list.h  pythoncapi_compat.h  rank.h  rank.hpp  result.hpp  settings.h  settings.hpp  sqs.hpp  structure_utils.hpp  types.h  types.hpp  utils.h  utils.hpp  version.hpp.in
sqsgenerator/core/python/: CMakeLists.txt  container_wrappers.hpp  data.cpp  data.hpp  helpers.cpp  helpers.hpp  iteration.cpp  iteration.hpp  module_core.cpp  module_data.cpp  module_iteration.cpp  module_utils.cpp
sqsgenerator/core/python/include/: container_wrappers.h  container_wrappers.hpp  helpers.h  helpers.hpp
sqsgenerator/core/src/: atomistics.cpp  conf_array.c  conf_collection.c  conf_list.c  containers.cpp  list.c  main.cpp  rank.c  rank.cpp  result.cpp  settings.cpp  sqs.cpp  structure_utils.cpp  utils.c  utils.cpp
sqsgenerator/fallback/: __init__.py
sqsgenerator/fallback/attrdict/: __init__.py  dictionary.py  merge.py  mixins.py
sqsgenerator/settings/: __init__.py  adapters.py  defaults.py  exceptions.py  functional.py  readers.py  structure.py  tools.py  utils.py
sqsgenerator/utils/: __init__.py  docopt.py  optionparser.py  utils.py
src/core/: configuration.cpp  permutation.cpp  shuffle.cpp  structure.cpp  structure_utils.cpp
templates/: how-to-re-w.json  re-w.first.json  ti-al-b-n.json
test/: CMakeLists.txt  create_structure_utils_test_case.py
test/cli/: __init__.py  test_callbacks.py  test_command_compute.py  test_command_params.py  test_command_run.py  utils.py
test/cli/bindings/: test_core_extensions.py  test_readers.py  test_structure.py  test_utils.py
test/core/src/: test_atomistics.cpp  test_helpers.hpp  test_rank.cpp  test_structure_utils.cpp  test_utils.cpp
test/resources/: al-fcc.test.data  cs-cl.cif  cs-cl.poscar.sqs.yaml  manganese.test.data  simple-fe.test.data  ti-al-b-n.yaml  ti-hcp.test.data
tests/: CMakeLists.txt  case1.structure.json  generate_supercell_test_case.py  generate_test_case.py  helpers.h  test_parser.cpp  test_permutation.cpp  test_shuffle.cpp  test_structure.cpp
tests/assets/: case1.structure.json  case1.supercell.json
(+20 files in other folders)
