[project]
name = "sqsgenerator"
authors = [
    { name = "Dominik Gehringer", email = "dgehringer@protonmail.com" }
]
maintainers = [
    { name = "Dominik Gehringer", email = "dgehringer@protonmail.com" },
    { name = "David Holec", email = "david.holec@unileoben.ac.at" }
]
description = "Create atomic structures for solid solutions for molecular simulations"
dependencies = ["numpy", "click"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.urls]
Homepage = "https://github.com/dgehringer/sqsgenerator"
Issues = "https://github.com/dgehringer/sqsgenerator/issues"
