[project]
name = "sqsgenerator"
authors = [
    {name = "Dominik Gehringer", email = "dgehringer@gmail.com"}
]
maintainers = [
    {name = "Dominik Gehringer", email = "dgehringer@gmail.com"}
]
description="Create atomic structures for molecular simulations"
dependencies = ["numpy", "click", "rich"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "version"}

[project.optional-dependencies]
test = [
    "pytest",
    "pymatgen",
    "ase",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.14",
    "mypy",
    "numpy",
    "pybind11"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.setuptools.package-data]
sqsgenerator = ["*.json", "*.pyi"]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
test-command = "pytest {project}/python/tests"
before-test = "pip install {project}/wheelhouse/*.whl"
build-verbosity = 1
test-extras = ["test"]
test-skip = ["*universal2:arm64"]


[tool.ruff]
extend-exclude = ["sqsgenerator/core/_core.pyi", "setup.py"]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # Ruff-specific
    "UP",   # pyupgrade
]
ignore = ["F401"]
