[project]
name = "sqsgenerator"
authors = [
    { name = "Dominik Gehringer", email = "dgehringer@gmail.com" }
]
maintainers = [
    { name = "Dominik Gehringer", email = "dgehringer@gmail.com" }
]
description = "Create atomic structures for molecular simulations"
dependencies = ["numpy", "click", "rich"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "version" }

[project.optional-dependencies]
test = [
    "pytest",
    "pymatgen",
    "ase",
]

[build-system]
requires = [
    "setuptools>=68.0.0", # Required for Python 3.13 support
    "wheel>=0.40.0",
    "ninja",
    "cmake>=3.27", # Newer CMake for better Python 3.13 support
    "pybind11>=2.11.0", # Minimum version with Python 3.13 support
    "numpy>=1.26.0", # Python 3.13 compatible version
    "mypy"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.setuptools.package-data]
sqsgenerator = ["*.json", "*.pyi"]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*musllinux*", "cp313-win*"]
test-command = "pytest {project}/python/tests --import-mode=importlib"
test-extras = ["test"]


[tool.ruff]
extend-exclude = ["sqsgenerator/core/_core.pyi", "setup.py"]

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP", # pyupgrade
]
ignore = ["F401", "RUF001"]
