[project]
name = "sqsgenerator"
authors = [
    { name = "Dominik Gehringer", email = "dgehringer@gmail.com" }
]
maintainers = [
    { name = "Dominik Gehringer", email = "dgehringer@gmail.com" }
]
description = "Create atomic structures for solid solutions for molecular simulations"
dependencies = ["numpy", "click"]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dgehringer/sqsgenerator"
Issues = "https://github.com/dgehringer/sqsgenerator/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pymatgen",
    "ase",
]

[build-system]
requires = [
    "scikit-build-core",
    "pybind11>=2.11.0", # Minimum version with Python 3.13 support
    "numpy>=1.26.0", # Python 3.13 compatible version
    "mypy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "DEBUG"
cmake.args = [
    "-DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake",
    "-DVCPKG_MANIFEST_DIR=..",
    "-DVCPKG_INSTALLED_DIR=../vcpkg/installed",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../vcpkg.json"
regex = '''(?sx)
"version-string"\s*:\s*"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)",
'''
result = "{major}.{minor}.{patch}"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
sqsgenerator = ["*.json", "*.pyi"]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*musllinux*"]
test-command = "pytest {project}/python/tests --import-mode=importlib"
test-extras = ["test"]


[tool.ruff]
extend-exclude = ["sqsgenerator/core/_core.pyi"]

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isortp
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP", # pyupgrade
]
ignore = ["F401", "RUF001"]
